# cpp-modules-test

./: .gitmodules  CMakeLists.txt  devlog.md
core-lib/: CMakeLists.txt  core.ixx  message.ixx
core-lib/core/: core.ixx  stdlib.ixx
core-lib/message/: message.cpp  message.ixx
program/: CMakeLists.txt  main.cpp
